@@ -566,15 +566,22 @@ val unfold_add =
 
 
 (* Tactic *)
+fun intros_tac intros facts =
+  (TRYALL (Method.insert_tac facts THEN'
+      REPEAT_ALL_NEW (resolve_tac intros)) |> CHANGED)
+    THEN Tactic.distinct_subgoals_tac;
 
-fun intro_locales_tac eager ctxt =
-  Method.intros_tac
+fun gen_intro_locales_tac intros_tac eager ctxt =
+  intros_tac
     (get_witnesses ctxt @ get_intros ctxt @ (if eager then get_unfolds ctxt else []));
 
+val intro_locales_tac = gen_intro_locales_tac Method.intros_tac;
+val try_intro_locales_tac= gen_intro_locales_tac Method.try_intros_tac;
+
 val _ = Context.>> (Context.map_theory
- (Method.setup (Binding.name "intro_locales") (Scan.succeed (METHOD o intro_locales_tac false))
+ (Method.setup (Binding.name "intro_locales") (Scan.succeed (METHOD o try_intro_locales_tac false))
     "back-chain introduction rules of locales without unfolding predicates" #>
-  Method.setup (Binding.name "unfold_locales") (Scan.succeed (METHOD o intro_locales_tac true))
+  Method.setup (Binding.name "unfold_locales") (Scan.succeed (METHOD o try_intro_locales_tac true))
     "back-chain all introduction rules of locales"));
 
 end;
